import { GeneratedType } from "@cosmjs/proto-signing";
import { MsgUpdateParams } from "./types/esgobservabilitydemo/esgobservabilitydemo/v1/tx";
import { MsgCreateRawMaterialExtraction } from "./types/esgobservabilitydemo/esgobservabilitydemo/v1/tx";
import { MsgUpdateRawMaterialExtraction } from "./types/esgobservabilitydemo/esgobservabilitydemo/v1/tx";
import { MsgDeleteRawMaterialExtraction } from "./types/esgobservabilitydemo/esgobservabilitydemo/v1/tx";
import { MsgCreateManufacturing } from "./types/esgobservabilitydemo/esgobservabilitydemo/v1/tx";
import { MsgUpdateManufacturing } from "./types/esgobservabilitydemo/esgobservabilitydemo/v1/tx";
import { MsgDeleteManufacturing } from "./types/esgobservabilitydemo/esgobservabilitydemo/v1/tx";
import { MsgCreateTransportation } from "./types/esgobservabilitydemo/esgobservabilitydemo/v1/tx";
import { MsgUpdateTransportation } from "./types/esgobservabilitydemo/esgobservabilitydemo/v1/tx";
import { MsgDeleteTransportation } from "./types/esgobservabilitydemo/esgobservabilitydemo/v1/tx";
import { MsgCreateMaterialProcessing } from "./types/esgobservabilitydemo/esgobservabilitydemo/v1/tx";
import { MsgUpdateMaterialProcessing } from "./types/esgobservabilitydemo/esgobservabilitydemo/v1/tx";
import { MsgDeleteMaterialProcessing } from "./types/esgobservabilitydemo/esgobservabilitydemo/v1/tx";

const msgTypes: Array<[string, GeneratedType]>  = [
    ["/esgobservabilitydemo.esgobservabilitydemo.v1.MsgUpdateParams", MsgUpdateParams],
    ["/esgobservabilitydemo.esgobservabilitydemo.v1.MsgCreateRawMaterialExtraction", MsgCreateRawMaterialExtraction],
    ["/esgobservabilitydemo.esgobservabilitydemo.v1.MsgUpdateRawMaterialExtraction", MsgUpdateRawMaterialExtraction],
    ["/esgobservabilitydemo.esgobservabilitydemo.v1.MsgDeleteRawMaterialExtraction", MsgDeleteRawMaterialExtraction],
    ["/esgobservabilitydemo.esgobservabilitydemo.v1.MsgCreateManufacturing", MsgCreateManufacturing],
    ["/esgobservabilitydemo.esgobservabilitydemo.v1.MsgUpdateManufacturing", MsgUpdateManufacturing],
    ["/esgobservabilitydemo.esgobservabilitydemo.v1.MsgDeleteManufacturing", MsgDeleteManufacturing],
    ["/esgobservabilitydemo.esgobservabilitydemo.v1.MsgCreateTransportation", MsgCreateTransportation],
    ["/esgobservabilitydemo.esgobservabilitydemo.v1.MsgUpdateTransportation", MsgUpdateTransportation],
    ["/esgobservabilitydemo.esgobservabilitydemo.v1.MsgDeleteTransportation", MsgDeleteTransportation],
    ["/esgobservabilitydemo.esgobservabilitydemo.v1.MsgCreateMaterialProcessing", MsgCreateMaterialProcessing],
    ["/esgobservabilitydemo.esgobservabilitydemo.v1.MsgUpdateMaterialProcessing", MsgUpdateMaterialProcessing],
    ["/esgobservabilitydemo.esgobservabilitydemo.v1.MsgDeleteMaterialProcessing", MsgDeleteMaterialProcessing],
    
];

export { msgTypes }